[package]
name = "ra_converter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw2.workspace = true
cw20.workspace = true
cw-storage-plus.workspace = true
serde.workspace = true
thiserror.workspace = true
