[package]
name = "ra_cw20"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std.workspace = true
cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true
serde.workspace = true
thiserror.workspace = true
