[package]
name = "ra_cw721"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std.workspace = true
cw2.workspace = true
cw721.workspace = true
cw721-base.workspace = true
serde.workspace = true
thiserror.workspace = true
